--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-google-signin/google-signin": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-config": "^1.4.11",
     "react-native-image-picker": "^4.10.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0"
